[gd_scene load_steps=8 format=3 uid="uid://bqjoyoashahyo"]

[ext_resource type="Texture2D" uid="uid://it5qagoxabo" path="res://Sprites/Tile.png" id="1_613su"]
[ext_resource type="Script" uid="uid://sv68sysn3ud8" path="res://Scripts/Enemies/enemy.gd" id="1_jcvw6"]
[ext_resource type="AudioStream" uid="uid://cavyqj80hp4t0" path="res://Sounds/step1.mp3" id="2_ubio8"]
[ext_resource type="AudioStream" uid="uid://b2f6ngartmd8r" path="res://Sounds/enemy hit.mp3" id="3_miwey"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3pdns"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_613su"]
radius = 35.0143

[sub_resource type="CircleShape2D" id="CircleShape2D_jcvw6"]
radius = 206.061

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 10
collision_layer = 16
collision_mask = 62
script = ExtResource("1_jcvw6")

[node name="TempSprite" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
texture = ExtResource("1_613su")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
visible = false

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3pdns")

[node name="HurtArea" type="Area2D" parent="."]

[node name="Hurtbox" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("CircleShape2D_613su")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionRadius" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_jcvw6")

[node name="sfx_damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_miwey")

[node name="sfx_step" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_ubio8")
volume_db = -10.0

[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
